--- a/Game- di-chuyển-đối-tượng.html
+++ b/Game- di-chuyển-đối-tượng.html
@@ -2,35 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Objects</title>
 </head>
 <body>
-<script>
-  function Hero(image, top, left, size){
-    this.image = image;
-    this.top = top;
-    this.left = left;
-    this.size = size;
-    this.getHeroElement = function(){
-      return '<img width="'+ this.size + '"' +
-              ' height="'+ this.size + '"' +
-              ' src="' + this.image +'"' +
-              ' style="top: '+this.top+'px; left:'+this.left+'px;position:absolute;" />';
-    }
-    this.moveRight = function(){
-      this.left += 20;
-      console.log('ok: ' + this.left);
-    }
-  }
-  var hero = new Hero('pikachu.png', 20, 30, 200);
-  function start(){
-    if(hero.left < window.innerWidth - hero.size){
-      hero.moveRight();
-    }
-    document.getElementById('game').innerHTML = hero.getHeroElement();
-    setTimeout(start, 500)
-  }
-  start();
-</script>
+<div id="game"></div>
 </body>
+<script>
+    function Hero(image, top, left, size){
+        this.speed = 1;
+        this.image = image;
+        this.top = top;
+        this.left = left;
+        this.size = size;
+        this.getHeroElement = function(){
+            return '<img width="'+ this.size + '"' +
+                ' height="'+ this.size + '"' +
+                ' src="' + this.image +'"' +
+                ' style="top: '+this.top+'px; left:'+this.left+'px;position:absolute;" />';
+        }
+        this.moveRight = function(){
+            this.left += this.speed;
+            console.log('ok: ' + this.left);
+        }
+    }
+    var hero = new Hero('img.png', 20, 30, 200);
+    function start(){
+        if(hero.left < window.innerWidth - hero.size){
+            hero.moveRight();
+        }
+        document.getElementById('game').innerHTML = hero.getHeroElement();
+        setTimeout(start, 1)
+    }
+    function handleKeyDown(event){
+        switch (event.keyCode) {
+            case 17 :
+                hero.speed = 5;
+                break;
+        }
+    }
+    window.addEventListener("keydown", handleKeyDown);
+    start();
+</script>
 </html>
